# Transformer_Neural_Network_HLS

./: .gitignore  README.md  array_test.py  compare_hls_pytorch.py  constituent_net_base.cpp  environment.yaml  example_torino.cpp  extract_weights_biases.py  log_table.h  nnet_self_attention.h  nnet_transformer.h  pytorch_attention_forward_src.py  pytorch_attention_src.py  pytorch_transformer_src.py  requirements.txt  search.out  search_quant.out  training_mean_var.txt  training_mean_var_detailed.txt  transformer.py
example_hls/: build_prj.tcl  (+3 more)
fyp21yuan-code/: pyproject.toml
fyp21yuan-code/code/: .gitignore
fyp21yuan-code/code/nn/: utils.py
fyp21yuan-code/code/notebooks/: graph.ipynb  hlf-samples.ipynb
fyp21yuan-code/code/poets/: nn.py  snn.py  test.sh
fyp21yuan-code/code/snn/: pnengo.py  snn.py  snn2.py
fyp21yuan-code/code/sonnet/: .bumpversion.cfg  Makefile  README.md  pyproject.toml
fyp21yuan-code/experiments/constituent_base/: best.pth.tar
fyp21yuan-code/nn/: build_dataset.py  evaluate.py  search_hyperparams.py  torchscript.py  train.py
fyp21yuan-code/nn/model/: data.py  layer.py
fyp21yuan-code/notebooks/: flops.ipynb
fyp21yuan-code/notebooks/evluation/: evaluation-constituent-base.ipynb  evaluation-constituent-graph.ipynb  evaluation-constituent-perceiver-1.ipynb  evaluation-constituent-perceiver-3-64.ipynb  project_path.py
fyp21yuan-code/poets/data/: inputs.csv
fyp21yuan-code/poets/examples/: nn.xml
fyp21yuan-code/poets/templates/: nn-gals.xml.jinja  snn-gals.xml.jinja
fyp21yuan-code/sonnet/sonnet/: __init__.py  models.py  version.py
(+1993 files in other folders)
