[tool.poetry]
name = "cern"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "^1.9.0"
nengo = "^3.1.0"
nengo-gui = "^0.4.8"
nengo-dl = "^3.4.1"
numpy = ">=1.19.2,<1.20.0"
h5py = ">=3.1.0,<3.2.0"
matplotlib = "^3.4.2"
pandas = "^1.2.5"
numba = "^0.53.1"
tqdm = "^4.61.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"
tensorboard = ">=2.5,<3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
