[tool.poetry]
name = "sonnet"
version = "0.1.0"
description = "Sonnet: a companion app for POETS graph-schema application."
readme = "README.md"
authors = ["Xinyang Yuan <you@example.com>"]

[tool.poetry.scripts]
sonnet = 'sonnet.cli:main'

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Jinja2 = "^3.0.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
